# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Day Jan ## 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Compiled and released new jar files: monetdb-jdbc-3.2.jre8.jar,
  monetdb-mcl-1.21.jre8.jar and jdbcclient.jre8.jar

* Thu Jan 13 2022 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Extended JdbcClient application with support for following \d commands:
    \dt  \dv  \dSt  \dSv  \df  \dp  \dSf  \dSp  \dn  \dSn  and  \ds
  for showing list of: user tables, user views, system tables, system views,
  user functions, user procedures, system functions, system procedures,
  user schemas, system schemas and user sequences.
  For more information, see the built-in help (\?) on available commands.

* Thu Nov 25 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Extended FileTransferHandler utility class by adding support for reading from
  and writing to gzip compressed files when using file name extension .gz
  Also improve error handling by testing on empty file name and provide more
  information when invalid file name is given or other compression formats are
  requested. As the FileTransferHandler utility class is used by JdbcClient
  application, it will now also support this functionality.

* Fri Nov 05 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- The JdbcClient application has been extended to support the new
    COPY ... ON CLIENT functionality.
  However for security reasons you must provide an explicit new startup argument
    --csvdir "/absolute/path/to/csvdatafiles"
  or on MS Windows
    --csvdir "C:\\path\\to\\csvdatafiles"
  in order to activate the JdbcClient application to down/up load data to/from
  the local file system.

* Fri Nov 05 2021 Joeri van Ruth <joeri.van.ruth@monetdbsolutions.com>
- Extended the MonetDB JDBC driver with support for the ON CLIENT clause of
  the COPY statements. To make use of this functionality you must first